--- a/membership.html
+++ b/membership.html
@@ -15,7 +15,7 @@
 
    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../maincode.html">
+        <a class="navbar-brand" href="./index.html">
           <img src="../images/tripsterlogo.jpg" alt="tripsterlogo" width="70" height="30" class="d-inline-block align-text-top">
           Tripster
         </a>
