--- a/bookings/booking.html
+++ b/bookings/booking.html
@@ -34,7 +34,7 @@
               <a class="nav-link active" aria-current="page" href="../membership.html">Membership </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../maincode.html">Contact Us</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Contact Us</a>
             </li>
           </ul>
           <span class="navbar-text">
